[tool.poetry]
name = "nums"
version = "0.2.3"
description = "A numerical computing library for Python that scales."
authors = ["NumS Development Team <elibol@cs.berkeley.edu>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nums-project/nums"
documentation = "https://nums.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = ">1.18.0,<=1.20.0"
ray = {extras = ["default"], version = ">=1.0.0,<1.5.0"}
scipy = "^1.7.1"
boto3 = "^1.18.21"

[tool.poetry.dev-dependencies]
pytest = "6.1.1"
pylint = "2.10.2"
moto = "1.3.16"
coverage = "5.3"
codecov = "2.1.9"
mypy = "0.910"
black = "21.4b0"
tqdm = "^4.62.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
