[build-system]
requires = ["setuptools<60.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (select with '-m slow')"]

[tool.coverage.run]
include = ["nums/*"]
omit = ["setup.py", "tests/**/*", "nums/core/settings.py", "nums/experimental"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
]
