[metadata]
name = nums
version = attr: nums.core.version.__version__
description = A numerical computing library for Python that scales.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nums-project/nums
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix

[options]
packages = find:
python_requires = >=3.6,<3.9
install_requires =
    numpy>1.18.0,<=1.20.0
    ray[default]>=1.0.0,<=1.6.0
    scipy
    boto3

[options.entry_points]
console_scripts =
    nums-coverage = nums.core.cmds.api_coverage:main

[options.extras_require]
testing =
    pytest==6.1.1
    pylint==2.10.2
    moto==1.3.16
    coverage==5.3
    codecov==2.1.9
    mypy==0.910
    black==21.4b0
    tqdm
    sklearn
