[metadata]
name = nums
version = attr: nums.core.version.__version__
description = A numerical computing library for Python that scales.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nums-project/nums
license = Apache 2.0
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Typing :: Typed
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.6,<3.10
install_requires =
    numpy>1.18.0,<=1.20.0
    ray[default]>=1.5.0,<=1.8.0
    psutil
    scipy
    boto3
    scikit-learn>0.23.0,<=0.24.0

[options.entry_points]
console_scripts =
    nums-coverage = nums.core.cmds.api_coverage:main

[options.extras_require]
testing =
    pytest==6.1.1
    pylint==2.10.2
    moto==1.3.16
    coverage==5.3
    codecov==2.1.9
    mypy==0.910
    black==21.4b0
    tqdm
    invoke
    modin==0.11.3
